Tue Sep  5 21:28:02 UTC 2006  Nishanth Shankaran  <nshankar@dre.vanderbilt.edu>

        * bin/MakeProjectCreator/config/ciao_race_component.mpb:
        * bin/MakeProjectCreator/config/ciao_race_default.mpb:
        * bin/MakeProjectCreator/config/ciao_race_monitor.mpb: Added new
          RACE specific base projects.

Fri Sep  1 19:58:06 UTC 2006  Ciju John  <johnc@ociweb.com>

        * bin/tao_orb_tests.lst:
          Turn on nightly regression test for bug 1476.

Fri Sep 1 13:49:12 UTC 2006  Martin Corino <mcorino@remedy.nl>

        * bin/PerlACE/Run_Test.pm:
          Increased process creation timeout for tests on openVMS.

Thu Aug 31 01:45:06 UTC 2006  Sumant Tambe  <sutambe@nospam>

        Added .xml files to it.
        * docs/svn/config:
        * docs/svn/svn-prefs.reg:

Wed Aug 30 17:45:30 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        This change fixes bug#2648

        * ace/Service_Object.cpp:

          Fixed formatting.

        * ace/Service_Repository.cpp:

          Updated logging.

        * ace/Service_Types.h:
        * ace/Service_Types.cpp:

          Added ACE_Service_Object_Type::initialized_ member variable to
          hold the result of calling init() on the ACE_Service_Object. The
          value is later consulted in ACE_Service_Object_Type::fini() to
          determine if ACE_Service_Object::fini() should be
          called. C++NPv2 (page 120) says that fini() must be called if
          and only if, init() succeeded, i.e. returned 0.

Wed Aug 30 17:18:52 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * bin/MakeProjectCreator/config/ciao_config_handlers.mpb
          Modified this file to fixed the "reference to `ACE_Singleton<CIAO
          ::Config_Handlers::XML_Helper, ACE_Null_Mutex>::instance()'"warnings
          with FC5_Static build.

Wed Aug 30 13:34:50 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/make_release
